2004-06-18  Edd Dumbill <edd@usefulinc.com>

	* libgsm/gsm.cc: delete MeTa when disconnected.
	* src/*.c: partially working phonemgr app now.
	* src/connection.c: make connection and disconnection
	happen in a separate thread, so the GUI doesn't block while
	this happens.
	* src/connection.c: implement auto-reconnect feature.
	* src/connection.c, src/ui.c: message receiving functional.
	* src/connection.c, ui.c: add disconnect_signal_handlers() to
	be called on quit, so don't deadlock in status change.
	* src/icon.c: make tray_icon_set do a tooltip too.
	* libgsm/gsm.cc: disconnect on errors properly.
	* libgsm/phonemgr-listener.cc: set disconnected flag on error.
	* src/menu.c: add Send Message menu item.
	* ui/phonemgr.glade: a bit of HIGgification.
	* src/ui.c: implement sending dialog.
	* ui/pixmaps/, Makefile.am: move pngs into same directory as
	glade file: abandon hope of glade respecting the pixmap dir.
	* src/gnome-phone-manager.desktop.in: correct icon path
	* po/POTFILES.in: update.
	* src/icon.c: update pixmaps path.
	* src/main.c: init UI before tray icon.
	* src/ui.c: prefer local UI to installed one, if available.
	* src/ui.c: hook up the Reply button.
	* src/connection.c: deal with empty bdaddr better.
	* Release 0.3.

2004-06-17  Edd Dumbill <edd@usefulinc.com>

	* Checking into GNOME CVS.  Starting port to the new Bonobo-less
	gnome-bluetooth framework.
	* Move gsm stuff to libgsm/. Start work on GObject wrapper for it.
	* libgsm/.cvsignore, .cvsignore: add cvsignores.
	* libgsm/phonemgr-listener.cc: keep track of whether connected, and
	complain if methods requiring connection are called when disconnected.
	* libegg/: import libegg bits we'll need.
	* autogen.sh: call libegg autogen.sh.
	* configure.in: chain libegg configure.
	* src/Makefile.am, src/main.c: stubs for main program.
	* ui/GNOME_PhonemanagerApplet.xml: remove.
	* src/gnome-phone-manager.desktop.in: add desktop file.

2003-07-06  Edd Dumbill  <edd@usefulinc.com>

	* Release 0.2.1.