@@ -1,3 +1,9 @@
+gnome-phone-manager ???
+=======================
+
+ * Makes serial-port timeout more generous and empties message queue
+   before reconnection.
+
 gnome-phone-manager 0.3
 =======================
 
