@@ -1,3 +1,9 @@
+2004-06-20  Edd Dumbill <edd@usefulinc.com>
+
+	* libgsm/gsm.cc: connect() empty send queue on connection to
+	avoid repeated sending of failing messages.  Increase timeout
+	on serial port to 30 seconds from 5.
+
 2004-06-18  Edd Dumbill <edd@usefulinc.com>
 
 	* libgsm/gsm.cc: delete MeTa when disconnected.
